fix: horizontal overflow title

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,6 @@ main{
     line-height: 1;
     left: 52%;
     top: -6px;
-    width: 100%;
     height: fit-content;
     text-transform: uppercase;
     font-family: 'Cera Pro Light', sans-serif;  
